--- a/package.json
+++ b/package.json
@@ -10,9 +10,26 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.2.0",
+        "@tailwindcss/forms": "^0.3.2",
+        "@tailwindcss/typography": "^0.4.0",
+        "autoprefixer": "^10.4.0",
         "axios": "^0.21",
+        "browser-sync": "^2.27.7",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "inputmask": "^5.0.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.3.11",
+        "tailwindcss": "^2.2.19",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.7",
+        "vue-scrollto": "^2.20.0",
+        "vue-template-compiler": "^2.6.14",
+        "vuelidate": "^0.7.6",
+        "vuex": "^3.6.2"
+    },
+    "dependencies": {
+        "postcss-import": "^14.0.2"
     }
 }
