--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vuex": "^3.6.2"
     },
     "dependencies": {
+        "daisyui": "^1.16.2",
         "postcss-import": "^14.0.2"
     }
 }
