--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
         "vue-scrollto": "^2.20.0",
         "vue-template-compiler": "^2.6.14",
         "vuelidate": "^0.7.6",
-        "vuex": "^3.6.2"
-    },
-    "dependencies": {
+        "vuex": "^3.6.2",
         "daisyui": "^1.16.2",
         "postcss-import": "^14.0.2"
     }
